<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="12dp"
    android:paddingVertical="20dp"
    tools:context=".ui.fragment.InputFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="18sp"
                android:layout_marginBottom="6dp"
                app:layout_constraintStart_toStartOf="@id/edt_first_name"
                app:layout_constraintBottom_toTopOf="@id/edt_first_name"/>

            <EditText
                android:id="@+id/edt_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/edt_shape"
                android:hint="@string/me"
                android:autofillHints=""
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@id/img_one"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/second_name"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/edt_second_name"
                app:layout_constraintBottom_toTopOf="@id/edt_second_name"/>

            <EditText
                android:id="@+id/edt_second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/edt_shape"
                android:hint="@string/you"
                android:autofillHints=""
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@id/edt_first_name"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/calculate"
                app:cornerRadius="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_second_name"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>


