<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="20dp"
    android:paddingHorizontal="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.onboarding.OnBoardPageFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_board_picture"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginHorizontal="6dp"
                android:maxHeight="500dp"
                android:src="@drawable/ob1"
                android:contentDescription="@string/todo"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tv_big_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:text="@string/have_a_good_time"
                app:layout_constraintTop_toBottomOf="@id/iv_board_picture"/>

            <TextView
                android:id="@+id/tv_small_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="34dp"
                android:text="@string/you_should_take_the_time_to_help_those_n_who_need_you"
                app:layout_constraintTop_toBottomOf="@id/iv_board_picture"/>

            <Button
                android:id="@+id/btn_get_started"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/get_started"
                android:visibility="gone"
                android:layout_marginBottom="36dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/dots_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:dotsColor="@color/grey"
                app:dotsCornerRadius="8dp"
                app:dotsSize="14dp"
                app:dotsSpacing="4dp"
                app:dotsWidthFactor="2.5"
                app:selectedDotColor="@color/purple_500"
                app:progressMode="true"
                android:layout_marginBottom="36dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>